Creating site for ragego, 0.1

--- a/dependencies.html
+++ b/dependencies.html
@@ -62,6 +62,7 @@
 										<a href="project-info.html" title="Project Information">Project Information</a>
 										<ul class="dropdown-menu">
 											<li ><a href="project-summary.html" title="Project Summary">Project Summary</a></li>
+											<li ><a href="index.html" title="About">About</a></li>
 											<li ><a href="license.html" title="Project License">Project License</a></li>
 											<li ><a href="team-list.html" title="Project Team">Project Team</a></li>
 											<li ><a href="source-repository.html" title="Source Repository">Source Repository</a></li>
@@ -383,7 +384,6 @@
     <th>URL</th> 
     <th>Release</th> 
     <th>Snapshot</th> 
-    <th>Blacklisted</th> 
    </tr> 
   </thead> 
   <tbody> 
@@ -392,21 +392,12 @@
     <td><a class="externalLink" href="https://github.com/PhilippeGeek/RageGo.git">https://github.com/PhilippeGeek/RageGo.git</a></td> 
     <td>Yes</td> 
     <td>Yes</td> 
-    <td>-</td> 
    </tr> 
    <tr class="a"> 
     <td>central</td> 
     <td><a class="externalLink" href="https://repo.maven.apache.org/maven2">https://repo.maven.apache.org/maven2</a></td> 
     <td>Yes</td> 
     <td>-</td> 
-    <td>-</td> 
-   </tr> 
-   <tr class="b"> 
-    <td>ragego-mvn-repo</td> 
-    <td><a class="externalLink" href="https://raw.github.com/PhilippeGeek/RageGo/gh-pages/mvn-repo/">https://raw.github.com/PhilippeGeek/RageGo/gh-pages/mvn-repo/</a></td> 
-    <td>Yes</td> 
-    <td>Yes</td> 
-    <td>Yes</td> 
    </tr> 
   </tbody> 
  </table> 
@@ -494,6 +485,9 @@
 							<ul class="nav nav-list">
 						<li >
 							<a href="project-summary.html" title="Project Summary">Project Summary</a>
+						</li>
+						<li >
+							<a href="index.html" title="About">About</a>
 						</li>
 						<li >
 							<a href="license.html" title="Project License">Project License</a>
