--- a/license.html
+++ b/license.html
@@ -61,6 +61,7 @@
 										<a href="project-info.html" title="Project Information">Project Information</a>
 										<ul class="dropdown-menu">
 											<li ><a href="project-summary.html" title="Project Summary">Project Summary</a></li>
+											<li ><a href="index.html" title="About">About</a></li>
 											<li class="active"><a href="" title="Project License">Project License</a></li>
 											<li ><a href="team-list.html" title="Project Team">Project Team</a></li>
 											<li ><a href="source-repository.html" title="Source Repository">Source Repository</a></li>
@@ -414,6 +415,9 @@
 							<ul class="nav nav-list">
 						<li >
 							<a href="project-summary.html" title="Project Summary">Project Summary</a>
+						</li>
+						<li >
+							<a href="index.html" title="About">About</a>
 						</li>
 						<li class="active">
 							<a href="#" title="Project License">Project License</a>
