--- a/project-summary.html
+++ b/project-summary.html
@@ -62,6 +62,7 @@
 										<a href="project-info.html" title="Project Information">Project Information</a>
 										<ul class="dropdown-menu">
 											<li class="active"><a href="" title="Project Summary">Project Summary</a></li>
+											<li ><a href="index.html" title="About">About</a></li>
 											<li ><a href="license.html" title="Project License">Project License</a></li>
 											<li ><a href="team-list.html" title="Project Team">Project Team</a></li>
 											<li ><a href="source-repository.html" title="Source Repository">Source Repository</a></li>
@@ -243,6 +244,9 @@
 							<ul class="nav nav-list">
 						<li class="active">
 							<a href="#" title="Project Summary">Project Summary</a>
+						</li>
+						<li >
+							<a href="index.html" title="About">About</a>
 						</li>
 						<li >
 							<a href="license.html" title="Project License">Project License</a>
