Creating site for ragego, 0.1

--- a/project-summary.html
+++ b/project-summary.html
@@ -159,7 +159,24 @@
  <div class="section"> 
   <h3 id="Project_Organization">Project Organization</h3> 
   <a name="Project_Organization"></a> 
-  <p>This project does not belong to an organization.</p> 
+  <table border="0" class="bodyTable table table-striped table-hover"> 
+   <thead> 
+    <tr class="a"> 
+     <th>Field</th> 
+     <th>Value</th> 
+    </tr> 
+   </thead> 
+   <tbody> 
+    <tr class="b"> 
+     <td>Name</td> 
+     <td>INSA Lyon - D&eacute;partement Premier Cycle</td> 
+    </tr> 
+    <tr class="a"> 
+     <td>URL</td> 
+     <td><a class="externalLink" href="http://www.insa-lyon.fr">http://www.insa-lyon.fr</a></td> 
+    </tr> 
+   </tbody> 
+  </table> 
  </div> 
  <div class="section"> 
   <h3 id="Build_Information">Build Information</h3> 
@@ -287,7 +304,7 @@
 		<div class="row">
 			<div class="span12">
 				<p class="pull-right"><a href="#">Back to top</a></p>
-				<p class="copyright">Copyright &copy;2015. All Rights Reserved.</p>
+				<p class="copyright">Copyright &copy;2015 <a href="http://www.insa-lyon.fr">INSA Lyon - Département Premier Cycle</a>. All Rights Reserved.</p>
 				<p class="version-date"><span class="projectVersion">Version: 0.1. </span><span class="publishDate">Last Published: 2015-02-10. </span></p>
 				<p><a href="http://github.com/andriusvelykis/reflow-maven-skin" title="Reflow Maven skin">Reflow Maven skin</a> by <a href="http://andrius.velykis.lt" target="_blank" title="Andrius Velykis">Andrius Velykis</a>.</p>
 			</div>
