--- a/team-list.html
+++ b/team-list.html
@@ -157,6 +157,15 @@
      <td>CET</td> 
      <td><span id="developer-0">CET</span></td> 
     </tr> 
+    <tr class="a"> 
+     <td><img src="http://www.gravatar.com/avatar/990f18a773a600f0539ec0b12adc17c0?d=mm&amp;s=60" alt="" /></td> 
+     <td>Benoit Renault</td> 
+     <td><a class="externalLink" href="mailto:benoit.renault@insa-lyon.fr">benoit.renault@insa-lyon.fr</a></td> 
+     <td>INSA Lyon</td> 
+     <td><a class="externalLink" href="http://insa-lyon.fr">http://insa-lyon.fr</a></td> 
+     <td>CET</td> 
+     <td><span id="developer-1">CET</span></td> 
+    </tr> 
    </tbody> 
   </table> 
  </div> 
@@ -189,6 +198,7 @@ function offsetDate(id, offset) {
 
 function init(){
     offsetDate('developer-0', '1');
+    offsetDate('developer-1', '1');
 }
 
 window.onLoad = init();
@@ -286,7 +296,7 @@ window.onLoad = init();
 		<div class="row">
 			<div class="span12">
 				<p class="pull-right"><a href="#">Back to top</a></p>
-				<p class="copyright">Copyright &copy;2015. All Rights Reserved.</p>
+				<p class="copyright">Copyright &copy;2015 <a href="http://www.insa-lyon.fr">INSA Lyon - Département Premier Cycle</a>. All Rights Reserved.</p>
 				<p class="version-date"><span class="projectVersion">Version: 0.1. </span><span class="publishDate">Last Published: 2015-02-10. </span></p>
 				<p><a href="http://github.com/andriusvelykis/reflow-maven-skin" title="Reflow Maven skin">Reflow Maven skin</a> by <a href="http://andrius.velykis.lt" target="_blank" title="Andrius Velykis">Andrius Velykis</a>.</p>
 			</div>
