--- a/source-repository.html
+++ b/source-repository.html
@@ -219,7 +219,7 @@
 		<div class="row">
 			<div class="span12">
 				<p class="pull-right"><a href="#">Back to top</a></p>
-				<p class="copyright">Copyright &copy;2015. All Rights Reserved.</p>
+				<p class="copyright">Copyright &copy;2015 <a href="http://www.insa-lyon.fr">INSA Lyon - Département Premier Cycle</a>. All Rights Reserved.</p>
 				<p class="version-date"><span class="projectVersion">Version: 0.1. </span><span class="publishDate">Last Published: 2015-02-10. </span></p>
 				<p><a href="http://github.com/andriusvelykis/reflow-maven-skin" title="Reflow Maven skin">Reflow Maven skin</a> by <a href="http://andrius.velykis.lt" target="_blank" title="Andrius Velykis">Andrius Velykis</a>.</p>
 			</div>
