--- a/index.html
+++ b/index.html
@@ -31,11 +31,8 @@
       </header>
       <section>
         <h1>
-<a id="ragego" class="anchor" href="#ragego" aria-hidden="true"><span class="octicon octicon-link"></span></a>RageGo</h1>
-
-<p><a href="https://travis-ci.org/PhilippeGeek/RageGo"><img src="https://travis-ci.org/PhilippeGeek/RageGo.svg?branch=master" alt="Build Status"></a></p>
-
-<p><a href="https://gitter.im/PhilippeGeek/RageGo?utm_source=badge&amp;utm_medium=badge&amp;utm_campaign=pr-badge&amp;utm_content=badge"><img src="https://badges.gitter.im/Join%20Chat.svg" alt="Join the chat at https://gitter.im/PhilippeGeek/RageGo"></a></p>
+<a id="ragego-" class="anchor" href="#ragego-" aria-hidden="true"><span class="octicon octicon-link"></span></a>RageGo <a href="https://travis-ci.org/PhilippeGeek/RageGo"><img src="https://travis-ci.org/PhilippeGeek/RageGo.svg?branch=master" alt="Build Status"></a>
+</h1>
 
 <p>RageGo : Role-play and Aesthetic Game Engine for Go</p>
 
