Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
       </header>
       <section>
         <h1>
-<a id="ragego-" class="anchor" href="#ragego-" aria-hidden="true"><span class="octicon octicon-link"></span></a>RageGo <a href="https://travis-ci.org/PhilippeGeek/RageGo"><img src="https://travis-ci.org/PhilippeGeek/RageGo.svg?branch=master" alt="Build Status"></a>
-</h1>
+<a id="ragego" class="anchor" href="#ragego" aria-hidden="true"><span class="octicon octicon-link"></span></a>RageGo</h1>
+
+<p><a href="https://travis-ci.org/PhilippeGeek/RageGo"><img src="https://travis-ci.org/PhilippeGeek/RageGo.svg?branch=master" alt="Build Status"></a></p>
 
 <p>RageGo : Role-play and Aesthetic Game Engine for Go</p>
 
