--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
 
 <p>RageGo : Role-play and Aesthetic Game Engine for Go</p>
 
+<iframe style="margin: 20px auto" width="560" height="315" src="https://www.youtube.com/embed/4L0HdEqx_jU" frameborder="0" allowfullscreen></iframe>
+
 <h1>
 <a id="about" class="anchor" href="#about" aria-hidden="true"><span class="octicon octicon-link"></span></a>About</h1>
 
