--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <h1>
 <a id="introduction" class="anchor" href="#introduction" aria-hidden="true"><span class="octicon octicon-link"></span></a>Introduction</h1>
 
-<p>Ce document a pour vocation d’offrir une vue générale au lecteur du logiciel libre “RageGo, a Role-Play and Aesthetic Game Engine for Go”, créé par Philippe VIENNE et Benoit RENAULT dans le cadre d’un projet de fin de classe prépartoire à l’INSA de Lyon. Afin de connaître dans le détail toutes les fonctionnalités du programme, il sera nécessaire de se référer à la documentation disponible sur <a href="http://doc.ragego.com/">http://doc.ragego.com/</a> (anglais). Il est également possible de consulter les sources du logiciel ainsi que des assets sur <a href="https://github.com/RageGo">https://github.com/RageGo</a>.</p>
+<p>Ce document a pour vocation d’offrir une vue générale au lecteur du logiciel libre “RageGo, a Role-Play and Aesthetic Game Engine for Go”, créé par Philippe VIENNE et Benoit RENAULT dans le cadre d’un projet de fin de classe préparatoire à l’INSA de Lyon. Afin de connaître dans le détail toutes les fonctionnalités du programme, il sera nécessaire de se référer à la documentation disponible sur <a href="http://doc.ragego.com/">http://doc.ragego.com/</a> (anglais). Il est également possible de consulter les sources du logiciel ainsi que des assets sur <a href="https://github.com/RageGo">https://github.com/RageGo</a>.</p>
 
 <h1>
 <a id="cahier-des-charges" class="anchor" href="#cahier-des-charges" aria-hidden="true"><span class="octicon octicon-link"></span></a>Cahier des charges</h1>
@@ -66,7 +66,7 @@
 <li>Être capable de calculer et jouer une partie de jeu de Go
 
 <ul>
-<li>Représenter un jeu de Go sous la forme d’objets informatique</li>
+<li>Représenter un jeu de Go sous la forme d’objets informatiques</li>
 <li>Implémenter un set de règles de jeu de Go cohérentes</li>
 <li>Permettre une édition dynamique du plateau de jeu (retour en arrière, avant, passer son tour…)</li>
 <li>Gérer le plateau de jeu indépendamment de la partie graphique de manière performante (usage d’un thread dédié)</li>
@@ -77,7 +77,7 @@
 <li>Supporter le format .sgf (standard game format)
 
 <ul>
-<li>Permettre la sauvegarde sur PC en jeu d’une partie</li>
+<li>Permettre la sauvegarde sur PC d’une partie, en cours de jeu</li>
 <li>Permettre l’usage de parties déjà jouées et scorées à des fins de test unitaires uniquement</li>
 </ul>
 </li>
